# ekalavya-personal-tutor

./: .gitignore  OverheadCamera.py  QuizWidget.py  TopicsWidget.py  WelcomeWidget.py  analysis.py  main.py  orchestrator.py  pyproject.toml  ui.py  utils.py
lessons/: lesson_advanced.json  lesson_remedial.json  quiz.json
lessons/Angle Sum Property of a Triangle/: lesson_advanced.json  lesson_remedial.json  quiz.json
lessons/Intersecting Lines and Angle Pairs/: lesson_remedial.json  quiz.json
lessons/Parallel Lines and a Transversal/: lesson_advanced.json  lesson_remedial.json  quiz.json
lessons/basics and definitions/: lesson_advanced.json  lesson_remedial.json  quiz.json
prompts/: hint_prompt.txt  ocr_prompt.txt  validation_prompt.txt
